--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cryptocompare": "^1.0.0",
     "fuzzy": "^0.1.3",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-highcharts": "^16.0.2",
